@@ -1,10 +1,11 @@
 v3.xx 2013//
 ~~~~~~~~~~~~~~~~
 Edit: Minor edits in Sections WILA, SSLE, RREF, TSS, HSE, NM
-Edit: Minor edits in Section VO
+Edit: Minor edits in Section VO, LC
 Edit: Extended slightly the conclusion of Theorem HSC
 Change: Theorem ISRN demoted to Exercise TSS.T11
 Change: Prefer "pivot columns" over "leading 1", Chapter SLE
+Typo: C^n in statement of Theorem SLSLC
 
 v3.10 2013/08/20
 ~~~~~~~~~~~~~~~~
